test/files/neg/t2910.check
t2910.scala:3: error: forward reference extends over definition of value ret
    val ret = l.map({ case MyMatch(id) => id })
                           ^
one error found
